# Auto-Labeler

./: .gitignore  404.html  MANIFEST.in  README.md  Roadmap.md  demo.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
api/: index.html
demos/: demo_basic.py  demo_embedding.py  demo_hierarchical.py  demo_iterative.py
docs/: advanced_usage.md  api.md  getting-started.md  index.md  strategies.md
docs/features/: choosing-a-strategy.md  discovery.md  labeling.md  telemetry.md
features/choosing-a-strategy/: index.html
features/discovery/: index.html
features/labeling/: index.html
features/telemetry/: index.html
getting-started/: index.html
search/: search_index.json
src/auto_labeler/: __init__.py  cli.py  core.py  llm.py  logger.py  schemas.py  strategies.py  utils.py
src/auto_labeler/prompts/: adjudicator.yaml  assignment.yaml  batch_assignment.yaml  discovery.yaml  discovery_classify.yaml  discovery_cluster.yaml  discovery_evolve.yaml  discovery_merge.yaml
src/auto_labeler/strategies/: __init__.py  discovery.py  embedding.py  labeling.py
tests/: test_core.py  test_embedding.py  test_iterative.py  test_strategies.py  verify_phase4.py
tests/data/: labeled.csv  sample.csv
tests/unit/: verify_phase4.py
